Fix position -> products__wrap--brunette

--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -83,8 +83,8 @@
   }
 
   .products__wrap--brunette {
-    margin-left: 1130px;
     width: 380px;
+    transform: translateX(220px);
   }
 
   .products__list--brunette {
